# televize

./: .bumpversion.cfg  .bumpversion.toml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  Changelog.md  Changelog.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  televize  televize.py  tox.ini
.github/workflows/: test.yml
tests/: test_feed_stream.py  test_live.py  test_live_stream.py  test_parser.py  test_play.py  test_playlist.py  test_playlists.py  utils.py
tests/data/: invalid.m3u8  invalid_line.m3u8  ivysilani.html  ivysilani_no_button.html  ivysilani_no_rel.html  playlist.m3u8  playlist_end.m3u8  variants.m3u8
tests/data/date_time_shift/: playlist_1.m3u8  playlist_2.m3u8  playlist_3.m3u8
tests/data/play_live/: client_playlist.json  output  playlist_1.m3u  playlist_2.m3u  stream_playlist.m3u
